--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "notes-frontend",
   "version": "0.1.0",
   "private": true,
-  "engines": {"Node": "14.18.1"},
+  "engines": {"node": "14.18.1"},
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.4",
